[gd_scene load_steps=12 format=3 uid="uid://ca8jnv1017qon"]

[ext_resource type="Script" uid="uid://dr5xoqwxk51jt" path="res://scripts/level_3.gd" id="1_uwxec"]
[ext_resource type="Script" uid="uid://csb34inkcbps6" path="res://scenes/inventario.gd" id="2_hhfj6"]
[ext_resource type="Texture2D" uid="uid://hxhqqt8j7gig" path="res://assets/siluetas.png" id="2_p6vls"]
[ext_resource type="Texture2D" uid="uid://ck0vg1717qqlm" path="res://assets/Pava elec.png" id="3_hhfj6"]
[ext_resource type="Texture2D" uid="uid://cr22ilycyjmw1" path="res://assets/MATE.png" id="4_wae8j"]
[ext_resource type="Texture2D" uid="uid://bmb7oojou2jts" path="res://assets/YERBA.png" id="5_ha73p"]
[ext_resource type="Texture2D" uid="uid://csgrv851201dh" path="res://assets/azucarera.png" id="6_vcx5n"]
[ext_resource type="Texture2D" uid="uid://deg4oa3nedkh2" path="res://assets/nivel3.png" id="8_ha73p"]
[ext_resource type="Script" uid="uid://b13ik1v6rfnf" path="res://scenes/pava_elec.gd" id="8_wae8j"]
[ext_resource type="Texture2D" uid="uid://bjxjg3txvf6sm" path="res://assets/objetoss.png" id="10_vcx5n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wae8j"]
size = Vector2(42.7146, 57.0858)

[node name="Level3" type="Node2D"]
script = ExtResource("1_uwxec")

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="ThoughtSpawner" type="Timer" parent="."]

[node name="DrainTimer" type="Timer" parent="."]

[node name="ThoughtsContainer" type="Node2D" parent="."]
z_index = 3

[node name="Inventario" type="Node2D" parent="."]
modulate = Color(0.7138, 0.83, 0.79514, 1)
position = Vector2(-20, 2)
script = ExtResource("2_hhfj6")

[node name="Siluetas" type="Sprite2D" parent="Inventario"]
position = Vector2(1110, 342)
scale = Vector2(1.08, 1.07273)
texture = ExtResource("2_p6vls")

[node name="PavaElec" type="Sprite2D" parent="Inventario"]
visible = false
position = Vector2(1116, 112)
texture = ExtResource("3_hhfj6")

[node name="Mate" type="Sprite2D" parent="Inventario"]
visible = false
position = Vector2(1106, 562)
texture = ExtResource("4_wae8j")

[node name="Yerba" type="Sprite2D" parent="Inventario"]
visible = false
position = Vector2(1114, 397)
scale = Vector2(0.990566, 0.85954)
texture = ExtResource("5_ha73p")

[node name="Azucarera" type="Sprite2D" parent="Inventario"]
visible = false
position = Vector2(1110, 255)
scale = Vector2(0.92, 0.92)
texture = ExtResource("6_vcx5n")

[node name="Pava" type="Area2D" parent="."]
position = Vector2(321, 299)
scale = Vector2(0.560112, 0.560112)
script = ExtResource("8_wae8j")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Pava"]
texture = ExtResource("3_hhfj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pava"]
position = Vector2(-7.14142, 3.57069)
scale = Vector2(2.505, 2.505)
shape = SubResource("RectangleShape2D_wae8j")

[node name="Azucarera" type="Area2D" parent="."]
position = Vector2(794, 312)
scale = Vector2(0.336473, 0.336473)
script = ExtResource("8_wae8j")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Azucarera"]
texture = ExtResource("6_vcx5n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Azucarera"]
position = Vector2(-2.5, 1.5)
scale = Vector2(2.505, 2.505)
shape = SubResource("RectangleShape2D_wae8j")

[node name="Yerba" type="Area2D" parent="."]
position = Vector2(941, 315)
scale = Vector2(0.475937, 0.475937)
script = ExtResource("8_wae8j")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Yerba"]
texture = ExtResource("5_ha73p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Yerba"]
position = Vector2(-2.5, 1.5)
scale = Vector2(2.505, 2.505)
shape = SubResource("RectangleShape2D_wae8j")

[node name="Mate" type="Area2D" parent="."]
position = Vector2(509, 445)
scale = Vector2(0.499445, 0.499445)
script = ExtResource("8_wae8j")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Mate"]
position = Vector2(-2, 0)
texture = ExtResource("4_wae8j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mate"]
position = Vector2(-2.5, 1.5)
scale = Vector2(2.505, 2.505)
shape = SubResource("RectangleShape2D_wae8j")

[node name="Fondo" type="Sprite2D" parent="."]
modulate = Color(0.74, 0.74, 0.74, 1)
z_index = -1
position = Vector2(575, 324)
scale = Vector2(1.04008, 1.0463)
texture = ExtResource("8_ha73p")

[node name="platito" type="Sprite2D" parent="."]
position = Vector2(544, 481)
scale = Vector2(0.220905, 0.386531)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(155.662, 30.5005, 464.092, 271.104)

[node name="platito2" type="Sprite2D" parent="."]
position = Vector2(831.375, 309.313)
scale = Vector2(0.196659, 0.329797)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(155.662, 30.5005, 464.092, 271.104)

[node name="cuchara" type="Sprite2D" parent="."]
position = Vector2(669, 273)
scale = Vector2(0.229469, 0.151987)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(0, 0, 175.907, 551.362)

[node name="cuchara2" type="Sprite2D" parent="."]
position = Vector2(624, 274)
scale = Vector2(0.229469, 0.151987)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(0, 0, 185.097, 551.362)

[node name="tacitas" type="Sprite2D" parent="."]
position = Vector2(323, 332)
scale = Vector2(0.159884, 0.188889)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(506.745, 284.853, 344.623, 225.154)

[node name="tacitas2" type="Sprite2D" parent="."]
position = Vector2(761, 326)
scale = Vector2(0.159884, 0.188889)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(506.745, 284.853, 344.623, 225.154)

[node name="galletitas" type="Sprite2D" parent="."]
position = Vector2(905.063, 306.813)
scale = Vector2(0.2629, 0.263631)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(998.408, 390.538, 281.592, 431.928)

[node name="olla" type="Sprite2D" parent="."]
position = Vector2(577, 302)
scale = Vector2(0.265714, 0.310726)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(0, 532.982, 525.125, 317.018)

[node name="harina" type="Sprite2D" parent="."]
position = Vector2(638, 491)
scale = Vector2(0.34127, 0.362464)
texture = ExtResource("10_vcx5n")
region_enabled = true
region_rect = Rect2(745.684, 500.817, 252.724, 349.183)

[connection signal="input_event" from="Pava" to="Pava" method="input_event"]
[connection signal="object_clicked" from="Pava" to="." method="_on_pava_clicked"]
[connection signal="input_event" from="Azucarera" to="Azucarera" method="input_event"]
[connection signal="object_clicked" from="Azucarera" to="." method="_on_azucarera_clicked"]
[connection signal="input_event" from="Yerba" to="Yerba" method="input_event"]
[connection signal="object_clicked" from="Yerba" to="." method="_on_yerba_clicked"]
[connection signal="input_event" from="Mate" to="Mate" method="input_event"]
[connection signal="object_clicked" from="Mate" to="." method="_on_mate_clicked"]
